--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "env-cmd": "^10.1.0",
     "madge": "^5.0.1",
     "react": "^18.1.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-localization": "^1.0.19",
