--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
+    "react-share": "^4.4.0",
     "reactstrap": "^9.0.2",
     "redux": "^4.2.0",
     "sass": "^1.51.0",
